--- a/index.html
+++ b/index.html
@@ -4,50 +4,67 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Style Sheets-->
-    <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">-->
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
     <link href="style/bootstrap.min.css" rel="stylesheet">
     <link href="style/style.css" rel="stylesheet">
     <!--End style sheets-->
     <title>ProPresenter Remote</title>
 </head>
 <body>
-    <div id="pageControl" class="d-flex flex-column justify-content-end col-12 vh-100">
-        <div id="pageBasicControlMd" class="d-xs-none d-md-flex flex-row flex-grow-1 col-12 justify-content-center p-3">
-            <button id="btnPrevSlide" class="btn btn-primary col-4 p-0" type="button" style="background-color: black;">
-                Go to Previous Slide
-            </button>
-            <div class="d-flex flex-column col-4 justify-content-stretch vh-95 px-3">
-                <button id="btnPrevPres" class="btn btn-primary flex-fill p-0" type="button" style="background-color: black;">
-                    Focus Previous Presentation
-                </button>
-                <button id="btnNextPres" class="btn btn-primary flex-fill p-0 mt-3" type="button" style="background-color: black;">
-                    Focus Next Presentation
+    <div class="d-flex flex-column justify-content-end col-12 vw-100 vh-100">
+        <!-- Basic Arrow Key-esque Controls-->
+        <div id="pagePresent" class="d-xs-none d-md-flex flex-column flex-md-row-reverse align-items-stretch flex-grow-1 flex-shrink-1 p-3">
+            <div class="d-flex flex-row flex-md-column justify-content-center w-50 h-100">
+                <button id="btnNextSlide" class="btn btn-primary p-0 mw-100 mh-100 slidebutton" type="button">
+                    <div style="width:100%; aspect-ratio: 16/9"></div>
+                    <p class="m-0 ps-2" style="text-align: left; background-color: #086db6;">Go to Next Slide</p>
                 </button>
             </div>
-            <button id="btnNextSlide" class="btn btn-primary col-4 p-0" type="button" style="background-color: black;">
-                Go to Next Slide
-            </button>
+            <div class="d-flex flex-row flex-md-column justify-content-center py-3 py-md-0 px-md-3 w-50 h-100">
+                <button id="btnPrevPresentation" class="btn btn-primary p-0 mw-100 mh-100 slidebutton" type="button">
+                    <div style="width:100%; aspect-ratio: 16/9" class="d-flex align-items-center justify-content-center"></div>
+                    <p class="m-0 ps-2" style="text-align: left; background-color: #086db6;">Focus Previous Presentation</p>
+                </button>
+                <button id="btnNextPresentation" class="btn btn-primary p-0 mw-100 mh-100 ms-3 ms-md-0 mt-md-3 slidebutton" type="button">
+                    <div style="width:100%; aspect-ratio: 16/9" class="d-flex align-items-center justify-content-center"></div>
+                    <p class="m-0 ps-2" style="text-align: left; background-color: #086db6;">Focus Next Presentation</p>
+                </button>
+            </div>
+            <div class="d-flex flex-row flex-md-column justify-content-center w-50 h-100">
+                <button id="btnPrevSlide" class="btn btn-primary p-0 mw-100 mh-100 slidebutton" type="button">
+                    <div style="width:100%; aspect-ratio: 16/9"></div>
+                    <p class="m-0 ps-2" style="text-align: left; background-color: #086db6;">Go to Previous Slide</p>
+                </button>
+            </div>
         </div>
-        <nav class="navbar sticky-bottom d-flex flex-column col-12 align-items-start p-0" style="background-color: black;">
+        <!-- Nav Bar my beloved -->
+        <div class="d-flex flex-column col-12 align-items-start p-0" style="background-color: var(--secondary);">
             <div class="d-flex flex-row justify-content-center col-12">
                 <button class="btn btn-link p-0 me-auto" type="button">
                     <p class="px-2 mb-0">&#060; Connect</p>
                 </button>
+                <form id="formConnect">
+                    <input type="text" id="ipAddress" placeholder="IP Address">
+                    <input type="text" id="intPort" placeholder="Port">
+                    <button id="btnConnect" class="btn btn-primary" type="button">
+                        <p>Connect</p>
+                    </button>
+                </form>
                 <div>
-                    <button class="btn btn-primary" type="button">
+                    <button id="navPresent" class="btn btn-primary navbutton present" type="button">
                         <p class="mb-0">Present</p>
                     </button>
-                    <button class="btn btn-primary" type="button">
+                    <button id="navStage" class="btn btn-primary navbutton stage" type="button">
                         <p class="mb-0">Stage</p>
                     </button>
-                    <button class="btn btn-primary" type="button">
+                    <button id="navSettings" class="btn btn-primary navbutton settings" type="button">
                         <p class="mb-0">Settings</p>
                     </button>
                 </div>
-                <p class="px-2 ms-auto" style="color: black;">&#060; Connect</p>
+                <p class="px-2 ms-auto" style="color: var(--secondary);">&#060; Connect</p>
             </div>
             <h1 class="align-self-center mb-1">ProPresenter Remote</h1>
-        </nav>
+        </div>
     </div>
     <!--Internal Scripts-->
     <script src="scripts/init.js"></script>
